                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 17-02-2006 changed: Update database -> Rescan database in strings.xml
 - 17-02-2006 fixed: my programs. don't try to launch nonexisting entries.
 - 17-02-2006 added: <radiowidth>, <radioheight>, <radioposx>, <radioposy> tags to radiobuttons.
 - 17-02-2006 added: Skin.SetString(), Skin.SetImage(), Skin.SetPath() and Skin.ResetSettings built in functions.  Also made the multiimage control accept an <info> tag for it's path, and added Skin.String() as an info label/image/path.
 - 16-02-2006 removed: the Shuffle button from Music Library
 - 16-02-2006 changed: In Music, the PLAY action and PLAY ITEM context menu options on a folder now clear the Now Playing window, queue the items, and start playback immediately
 - 16-02-2006 added: Update database to my programs.
 - 16-02-2006 fixed: Some RSS feeds were showing only the first item.  CDATA sections are now completely ignored.
 - 16-02-2006 fixed: Animations on ShowInfo or ShowCodec in fullscreen video weren't completed.
 - 16-02-2006 added: <textwidth> tag to button controls to truncate text if it's too long.
 - 16-02-2006 added: shuffle option to the slideshow screensaver
 - 16-02-2006 added: httpapi takescreenshot command also accepts "imgtag" parameter after the download option
 - 16-02-2006 added: httpapi getthumb command accepts additional "imgtag" parameter to return a base64 encoded html img tag
 - 16-02-2006 changed: Songs off the root of the Music Library now fetches the songs in batches to work around memory constraints
 - 16-02-2006 fixed: album info lookup could sometimes return the wrong album from allmusic.com